sapiens_tools/tests/snapshots/e2e__python__exit_in_python.snap
---
source: sapiens_tools/tests/python.rs
expression: e
---
Tool invocation failed: Python code execution failed: SystemExit: 0
