sapiens_tools/tests/snapshots/e2e__python__multiple_tool_invocations.snap
---
source: sapiens_tools/tests/python.rs
expression: output
---
stdout: |
  Hello world 1!
stderr: ''

