sapiens_tools/tests/snapshots/e2e__python__python.snap
---
source: sapiens_tools/tests/python.rs
expression: output
---
stdout: |
  And the result is: hello and something else
stderr: ''

