sapiens_tools/tests/snapshots/e2e__python__tool_invocation_in_python.snap
---
source: sapiens_tools/tests/python.rs
expression: output
---
stdout: |
  Hello world!
  {'something': 'blah and something else'}
  {'something': 'blah and something else'}
stderr: ''

